<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/contentListFragment"
        android:icon="@drawable/ic_book"
        android:title="@string/content" />
        
    <item
        android:id="@+id/glossaryFragment"
        android:icon="@drawable/ic_glossary"
        android:title="@string/glossary" />
        
    <item
        android:id="@+id/quizListFragment"
        android:icon="@drawable/ic_quiz"
        android:title="@string/tests" />
        
    <item
        android:id="@+id/bookmarksFragment"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks" />
        
    <item
        android:id="@+id/notesFragment"
        android:icon="@drawable/ic_note"
        android:title="@string/notes" />
        
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu> 